# space_and_time_adaptivity

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Progetto/: CMakeLists.txt
Progetto/src/: heat_equation.cc  heat_equation.h  main.cc  plainProgram.cpp  right_hand_side.h  utilities.cc  utilities.h
src/: heat_equation.cc  heat_equation.h  main.cc  right_hand_side.h  utilities.cc  utilities.h
